# libcan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  gtest-tap-listener.cmake  waitforssh.sh
.github/actions/: ci.yml
.github/workflows/: ci.yml  socketcan.yml
.github/workflows/scripts/: socketcan-run-tests.sh
can/core/: CMakeLists.txt
can/core/include/core/providers/: base.h
can/core/src/providers/: base.cpp
can/rp2040/include/rp2040/mcp2515/: provider.h
core/: CMakeLists.txt
core/include/core/: isotp.h  message.h
core/include/core/isotp/tl/: parse.h
core/include/core/protocol/frame/: data.h  dlc.h  frame.h  identifier.h  type.h  util.h
core/include/core/providers/: base.h
core/src/: message.cpp
core/src/isotp/tl/: parse.cpp
core/src/protocol/frame/: dlc.cpp  frame.cpp  util.cpp
core/src/providers/: base.cpp
core/test/: CMakeLists.txt
core/test/fuzz/: CMakeLists.txt
core/test/fuzz/src/: main.cpp  protocol_frame_fuzz_test.cpp  protocol_frame_fuzz_test.h
core/test/src/: main.cpp  protocol_frame_test.cpp  protocol_frame_test.h  protocol_frame_test_input.h
docs/: Doxyfile.in  docs.cmake
lib/common/boost/: CMakeLists.txt
linux/socketcan/: CMakeLists.txt
linux/socketcan/impl/: CMakeLists.txt
linux/socketcan/impl/include/linux/socketcan/: provider.h
linux/socketcan/impl/src/: provider.cpp
linux/socketcan/standalone/: CMakeLists.txt
linux/socketcan/standalone/src/: main.cpp
rp2040/: CMakeLists.txt  pico-sdk.cmake
rp2040/core/: CMakeLists.txt
rp2040/core/include/rp2040/mcp2515/: bitrate.h
rp2040/mcp2515/: CMakeLists.txt
rp2040/mcp2515/impl/: CMakeLists.txt  pico-mcp2515.cmake
rp2040/mcp2515/impl/include/rp2040/mcp2515/: provider.h
rp2040/mcp2515/impl/src/: provider.cpp
rp2040/mcp2515/impl/test/: main.cpp  provider_test.cpp  provider_test.h
rp2040/mcp2515/impl/test/mocks/: gpio.hpp  mcp2515.h  provider.h
rp2040/mcp2515/standalone/: CMakeLists.txt
rp2040/mcp2515/standalone/src/: main.cpp
rp2040/mcp2515/test/: CMakeLists.txt
rp2040/mcp2515/test/src/: main.cpp
rp2040/mcp2515/test/src/mocks/: provider.h
rp2040/standalone_test/: CMakeLists.txt
rp2040/stubs/: CMakeLists.txt
rp2040/stubs/include/hardware/: gpio.stub.h  spi.h
rp2040/stubs/include/hardware/regs/: intctrl.h
src/: main.cpp  message.h
src/core/: CMakeLists.txt  config.h.in
src/core/include/core/: logger.h  logger_defines.h
src/core/include/core/isotp/error/: consecutive_frame.h  first_frame.h  frame.h  link_manager.h  single_frame.h
src/core/include/core/isotp/error/category/: isotp.h  libcan.h
src/core/include/core/isotp/error/code/: code.h  consecutive_frame.h  first_frame.h  frame_handle.h  link_manager.h  single_frame.h  success.h
src/core/include/core/isotp/error/code/category/: isotp_code.h
src/core/include/core/isotp/error/common/: overload.h
src/core/include/core/isotp/error/common/category/: isotp.h  libcan.h
src/core/include/core/isotp/error/condition/: condition.h  frame_condition.h
src/core/include/core/isotp/error/condition/category/: isotp_condition.h
src/core/include/core/isotp/link/: directional_link.h  link.h  manager.h  registration.h  state.h
src/core/include/core/isotp/tl/: parse.h
src/core/include/core/isotp/tl/handler/: base.h  consecutive_frame.h  first_frame.h  manager.h  single_frame.h
src/core/include/core/isotp/tl/pci/: consecutive_frame.h  flow_control.h  frame_type.h  single_frame.h
src/core/include/core/isotp/tl/pdu/: base.h  flow_control.h
src/core/include/core/protocol/frame/: dlc.h  frame.h  identifier.h  type.h  util.h
src/core/include/core/providers/: base.h
src/core/src/: logger.cpp
src/core/src/isotp/error/category/: isotp.cpp  libcan.cpp
src/core/src/isotp/error/code/: code.cpp
src/core/src/isotp/error/code/category/: isotp_code.cpp
src/core/src/isotp/error/common/category/: isotp.cpp  libcan.cpp
src/core/src/isotp/error/condition/category/: isotp_condition.cpp
src/core/src/isotp/link/: directional_link.cpp  link.cpp  manager.cpp
src/core/src/isotp/tl/: parse.cpp
src/core/src/isotp/tl/handler/: consecutive_frame.cpp  first_frame.cpp  manager.cpp  single_frame.cpp
src/core/src/isotp/tl/pdu/: base.cpp  flow_control.cpp
src/core/src/protocol/frame/: frame.cpp
src/core/src/providers/: base.cpp
src/linux/socketcan/: CMakeLists.txt
src/linux/socketcan/include/linux/socketcan/: provider.h
src/linux/socketcan/src/: provider.cpp
src/providers/: base.cpp  base.h  bitrate.h
src/providers/rp2040/: mcp2515.cpp  mcp2515.h
src/providers/rp2040/mcp2515/: bitrate.h
src/rp2040/: CMakeLists.txt  pico-sdk.cmake  subdir_exclude_plat.cmake
src/rp2040/mcp2515/: CMakeLists.txt  pico-mcp2515.cmake
src/rp2040/mcp2515/include/rp2040/mcp2515/: provider.h
src/rp2040/mcp2515/src/: provider.cpp
standalone/linux/socketcan/src/: main.cpp
test/core/: CMakeLists.txt
test/core/fuzz/src/: protocol_frame_fuzz_test.cpp
test/core/src/: main.cpp  protocol_frame_test.cpp  sequence_number_test.cpp  sequence_number_test.h
test/isotp/: bitwise.py  canfd.py  requirements.txt  send.py
test/linux/socketcan/: CMakeLists.txt
test/linux/socketcan/src/: main.cpp  provider_test.cpp  provider_test.h  soc_shutdown_test.cpp
test/rp2040/: CMakeLists.txt
test/rp2040/mcp2515/src/: main.cpp  provider_test.cpp
test/rp2040/mcp2515/src/mocks/: provider.h  spi.hpp
test/rp2040/stubs/: CMakeLists.txt  null.c
test/rp2040/stubs/include/hardware/: irq.stub.h  platform_defs.h
